--- a/form.html
+++ b/form.html
@@ -14,44 +14,26 @@
 
       <div class="container">
 
+        <br><br><br>
+
       <form>
-        <div class="form-group">
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="hotelBtn" value="option1">
-            <label class="form-check-label" for="inlineRadio1">Hotel</label>
-          </div>
-
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="motelBtn" value="option2">
-            <label class="form-check-label" for="inlineRadio2">Motel</label>
-          </div>
-
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="houseBtn" value="option3">
-            <label class="form-check-label" for="inlineRadio3">House</label>
-          </div>
-
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="hostelBtn" value="option4">
-            <label class="form-check-label" for="inlineRadio4">Hostel</label>
-          </div>
-        </div>
           <!----------------------------------------->
           <div class="form-group">
             <label for="exampleFormControlSelect1">LOCATION</label>
             <select class="form-control" id="location" placeholder="Enter a location">
-              <option>Auckland</option>
-              <option>Hamilton</option>
-              <option>Moteuka</option>
-              <option>Queenstown</option>
-              <option>Christchurch</option>
-              <option>Dunedin</option>
-              <option>Napier</option>
-              <option>New Plymouth</option>
+              <option id="all">All</option>
+              <option id="auckland">Auckland</option>
+              <option id="hamilton">Hamilton</option>
+              <option id="moteuka">Moteuka</option>
+              <option id="queenstown">Queenstown</option>
+              <option id="christchurch">Christchurch</option>
+              <option id="dunedin">Dunedin</option>
+              <option id="napier">Napier</option>
+              <option id="newPlymouth">New Plymouth</option>
             </select>
           </div>
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="exampleFormControlInput1">CHECK IN</label>
             <div class="d-flex align-items-center ml-2">
                <input type="text" id="checkinBtn" name="from" placeholder="mm/dd/yy">
@@ -63,7 +45,7 @@
             <div class="d-flex align-items-center ml-2">
               <input type="text" id="checkoutBtn" name="to" placeholder="mm/dd/yy">
             </div>
-          </div>
+          </div> -->
 
           <div class="form-group">
             <label for="exampleFormControlSelect1">GUESTS</label>
