--- a/home.html
+++ b/home.html
@@ -34,15 +34,15 @@
                   <label class="col-form-label">Location:</label>
                       <div class="col d-flex align-items-center">
                         <select class="form-control" id="location" placeholder="Enter a location">
-                          <option id="all">All</option>
-                          <option id="auckland">Auckland</option>
-                          <option id="hamilton">Hamilton</option>
-                          <option id="moteuka">Moteuka</option>
-                          <option id="queenstown">Queenstown</option>
-                          <option id="christchurch">Christchurch</option>
-                          <option id="dunedin">Dunedin</option>
-                          <option id="napier">Napier</option>
-                          <option id="newPlymouth">New Plymouth</option>
+                          <option></option>
+                          <option>Auckland</option>
+                          <option>Hamilton</option>
+                          <option>Moteuka</option>
+                          <option>Queenstown</option>
+                          <option>Christchurch</option>
+                          <option>Dunedin</option>
+                          <option>Napier</option>
+                          <option>New Plymouth</option>
                         </select>
                       </div>
                   </div>
@@ -127,7 +127,7 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-    <script src="js/script3.js"></script>
+    <script src="js/script.js"></script>
   </body>
 
 </html>
