--- a/home.html
+++ b/home.html
@@ -25,12 +25,12 @@
       <div id="content">
         <div id="sections">
 
-            <div class="location row d-flex justify-content-center">
-                <div class="col-1">
+            <div class="location row d-flex justify-content-center space-around">
+                <div class="col-1 mt-3">
                   <img src="images/location.png" class="img-fluid" alt="location icon">
                 </div>
                 <div class="col-11">
-                  <div class="form-group row mb-0">
+                  <div class="form-group row mt-2">
                   <label class="col-form-label">Location:</label>
                       <div class="col d-flex align-items-center">
                         <select class="form-control" id="location" placeholder="Enter a location">
@@ -56,7 +56,7 @@
               <div class="col-11">
                 <div class="form-group row mb-0">
                     <label for="from">Check In:</label>
-                   <div class="d-flex align-items-center ml-2">
+                   <div class="d-flex align-items-center ml-4 checkinInput">
                       <input type="text" id="from" name="from" placeholder="mm/dd/yy">
                     </div>
                 </div>
@@ -70,7 +70,7 @@
               <div class="col-11">
                 <div class="form-group row mb-0">
                     <label for="to">Check Out:</label>
-                    <div class="d-flex align-items-center ml-2">
+                    <div class="d-flex align-items-center ml-3 checkoutInput">
                       <input type="text" id="to" name="to" placeholder="mm/dd/yy">
                     </div>
                 </div>
