--- a/home.html
+++ b/home.html
@@ -26,11 +26,11 @@
         <div id="sections">
 
             <div class="location row d-flex justify-content-center space-around">
-                <div class="col-1 mt-3">
+                <div class="col-1">
                   <img src="images/location.png" class="img-fluid" alt="location icon">
                 </div>
                 <div class="col-11">
-                  <div class="form-group row mt-2">
+                  <div class="form-group row">
                   <label class="col-form-label">Location:</label>
                       <div class="col d-flex align-items-center">
                         <select class="form-control" id="location" placeholder="Enter a location">
