--- a/home.html
+++ b/home.html
@@ -14,14 +14,14 @@
   <body>
 
   <div id="pageContents">
-    <div class="getStart started">
-      <div class="getStartContent startedContent">
+    <div class="getStart">
+      <div class="getStartContent">
         <img id="logo" class="image100" src="images/logo.png" alt="icon">
-        <button id="start" class="btn upper hidden">Book your next adventure</button>
+        <button id="start" class="btn upper">Book your next adventure</button>
       </div>
     </div>
 
-    <div id="contentContainer" class="">
+    <div id="contentContainer" class="contentContainerStart">
       <div id="content">
         <div id="sections">
 
